NCL-5815 Use 1.1 version of doclet. Switch to source version 8 for javadoc and quieten it down. Remove extra exports.